org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
/* ... */
.mcq-content-container .outer-option-container.horizontal::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.mcq-content-container .outer-option-container.horizontal::-webkit-scrollbar-thumb {
    background-color: #65A0E6;
    outline: 1px solid slategrey;
    border: 0.3em;
    height: 75%;
    width: 75%;
}

.mcq-content-container .option-container.horizontal .option-block-container {
    justify-content: center;
    display: table-cell;
    align-items: center;
    vertical-align: middle;
    padding-right: 5px;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block {
    cursor: pointer;
    width: 100%;
    height: 15vh;
    line-height: 15vh;
    margin-bottom: 1.5625%;
    border-radius: 4px;
    background-color: #FFFFFF;
    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%);
    position: relative;
    display: flex;
}
.mcq-content-container .option-container.horizontal .option-block-container .option-width-50 {
    width: 48%;
    display: inline-block;
    margin: 1px 1px 1px 1px;
}
.mcq-content-container .option-container .horizontal .option-block-container .option-width-50 .option-text-container-mcq .mcq-imagegrid-text{
    width: 70vw;
    max-width: 78%;
    max-height: 90%;
    position: absolute;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

.mcq-content-container .option-container.horizontal .option-block-container .option-width-50 .audio-icon {
    cursor: pointer;
    position: absolute;
    top: 0%;
    bottom: 0%;
    right: 3%;
    margin: auto;
    width: 15%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block.selected {
    background-color: #7AB4EE;
    border: solid 2px #024F9D;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block img.audio {
    cursor: pointer;
    position: absolute;
    top: 0%;
    bottom: 0%;
    right: 3%;
    margin: auto;
    width: 9%;
    z-index: 1;
}
.mcq-content-container .option-container.horizontal .option-block-container .option-block img.audio.with-image {
    cursor: pointer;
    position: absolute;
    top: 0%;
    bottom: 0%;
    left: 89%;
    margin: auto;
    width: 9%;
    z-index: 1;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container {
    height: 100%;
    width: 10vw;
    float: left;
    position: relative;
    display: table-cell;
    cursor: default;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container.no-image {
    display: none;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container .mcq-option-img {
    max-height: 100%;
    max-width: 100%;
    position: relative;
    border-radius: 2px;
    margin: auto;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
}
.zoom-icon-set{
    position: relative;
    top: 0;
    transform: none;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block img.tick {
    display: none;
    position: absolute;
    top: 0%;
    bottom: 0%;
    right: 1%;
    margin: auto;
    width: 6%;
    z-index: 1;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block.selected img.tick {
    display: block;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container {
    width: 100%;
    height: 100%;
    position: relative;
    display: table-cell;
    vertical-align: middle;
    padding-left: 5%;
}
mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.imagegrid-text-mcq{
    display: block;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-image {
    margin-left: 10%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-audio {
    padding-left: 8%;
    padding-right: 8%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-audio .urdu-text{
    margin-right:-9%; /* to override padding-right of the parent element*/
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container.with-audio.with-image {
    margin-left: 15%;
}

.mcq-content-container .option-container.horizontal .option-block-container .option-block .option-text-container>span {
    width:92%;
    height: auto;
    position: relative;
    top: 0;
    bottom: 0;
    display: block;
    align-items: center;
    vertical-align: middle;
}
.mcq-content-container .option-container.horizontal .option-block-container .option-width-50 .option-text-container-mcq .mcq-imagegrid-text{
    width: 70vw;
    max-width: 78%;
    max-height: 90%;
    position: absolute;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
.mcq-content-container .option-container.horizontal .option-block-container .option-width-50 .option-text-container-mcq>span>p{
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    line-height: initial;
    padding-top: 5px;
}
.mcq-content-container .option-container.horizontal .option-block:last-child {
    margin-bottom: 0%;
}

.mcq-imagehorizontal-content-container{
    width: 100%;
    height: 100%;
    position: relative;
    top: 0%;
}
.mcq-imagehorizontal-question-container{
    height: 48%;
}
/* ... */

